--- a/app/views/gtm_on_rails/layouts/_data_layer_tag.html.erb
+++ b/app/views/gtm_on_rails/layouts/_data_layer_tag.html.erb
@@ -1,7 +1,12 @@
 <% begin %>
-  <%= data_layer.print_on_js %>
+  <%= data_layer.print_on_html %>
 <%-
-  rescue StandardError => e
-    raise e unless GtmOnRails.config.rescue_when_error_occurred
+  rescue => e
+    if GtmOnRails.config.rescue_when_error_occurred
+      logger.warn(e.message)
+      logger.warn(e.backtrace.join("\n"))
+    else
+      raise e
+    end
   end
 -%>
