--- a/app/views/gtm_on_rails/layouts/_data_layer_tag.html.erb
+++ b/app/views/gtm_on_rails/layouts/_data_layer_tag.html.erb
@@ -1,5 +1,7 @@
 <% begin %>
+  <!-- GTM on Rails -->
   <%= data_layer.print_on_html %>
+  <!-- End GTM on Rails -->
 <%-
   rescue => e
     if GtmOnRails.config.rescue_when_error_occurred
